phase9-gitops-platform/environments/dev-k8s/manifests/elastic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: observability
  annotations:
    haproxy.org/ssl-redirect: "false"
    haproxy.org/timeout-server: "300s"
spec:
  ingressClassName: haproxy
  rules:
    - host: npd-kibana.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kb-kb-http
                port:
                  number: 5601
